force-app/main/default/objects/TCI_Job_Setting__c/TCI_Job_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TCI Job Setting</label>
</CustomObject>