force-app/main/default/objects/TCI_Job_Setting__c/fields/BT_Amount__c.field-meta.xml
<CustomField>
    <fullName>BT_Amount__c</fullName>
    <label>BT Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>