force-app/main/default/objects/TCI_Job_Setting__c/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>