force-app/main/default/objects/TCI_Job_Setting__c/fields/Pricing_Strategy_Default__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Strategy_Default__c</fullName>
    <label>Pricing Strategy Default</label>
    <length>25</length>
    <type>Text</type>
</CustomField>