force-app/main/default/objects/TCI_Job_Setting__c/fields/Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy__c</fullName>
    <label>Privacy Policy</label>
    <length>25</length>
    <type>Text</type>
</CustomField>