force-app/main/default/objects/TCI_Job_Setting__c/fields/Skip_Delete_Days__c.field-meta.xml
<CustomField>
    <fullName>Skip_Delete_Days__c</fullName>
    <label>Skip Delete Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>