force-app/main/default/objects/TCI_Job_Setting__c/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>